@@ -1,3 +1,7 @@
+OpenVi 7.1.17 -> OpenVi 7.1.18-dev: Thu Jun 16 07:23:53 2022
+        + Improve status messages
+        + Update documentation
+
 OpenVi 7.0.16 -> OpenVi 7.1.17: Sun Apr 24 07:57:29 2022
         + In v_event_get check qp->output for NULL before passing to
           e_memcmp(); other users of qp->output already include a NULL check;
